force-app/main/default/objects/Individual_SM_1704384310964__dlm/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Segment_Membership</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <primaryIndexOrder>1</primaryIndexOrder>
        <refAttrDeveloperName>Id</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>