force-app/main/default/objects/Individual_SM_1704384310964__dlm/fields/rel_1704384313361_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1704384313361_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual_SM_1704384310964_Id_map_s_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Individual_SM_1704384310964_Id_map_s_rel</relationshipLabel>
    <relationshipName>rel_1704384313361_end</relationshipName>
    <type>Lookup</type>
</CustomField>